--- a/backend/views/auth/signup.ejs
+++ b/backend/views/auth/signup.ejs
@@ -10,6 +10,7 @@
             <% for(var i in messages) { %>
                 <div class="flash"><%= messages[i] %></div>
             <% } %>
+            <!-- Sign-up Page -->
             <form action="/users/signup" method="post" validate>
                 <div class="form-group">
                     <label>First Name:</label>
