--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -2,38 +2,32 @@
 
 <div class="main_div" style="background-image:url('/images/img9.png');">
     <div class="container_div">
-       
         <!-- Customized header -->
-         <div class="container_header"> 
-            <h1>Hello, we are Crypto Crests!</h1>
-    
+        <div class="container_header"> 
+            <h1>Hello, we are Crypto Crest!</h1>
             <!-- Page content -->
             <div class="content">
-    
                 <br>
-                <!--My Image-->
+                <!--Logo-->
                   <img class="id" src="/images/image_logo.jpeg" width="190" height= "200">
-    
                 <br>
                 <br>
                 <p>We are an agile group of 6 Software Engineers collaborating to build a survey web application for users who wish to create their own, personalized surveys.
                     We are open to feedbacks :)
                 </p>
                 <p>To begin your dynamic survey creativity experience <a href="/create-survey">Click Here!</a></p>
-                
                 <br>
                 <br>
                 <br>
                 <!-- Customized Footer -->
                 <div class="footer">
                 <footer>
-                    <p>©Copyright2021 Crypto Crests | Fall 2021 | Comp229</p>
+                    <p>©Copyright2021 Crypto Crest | Fall 2021 | Comp229</p>
                 </footer>
-                </div>
-                        
+                </div> 
             </div>
         </div>	
     </div>	
-    </div>
+</div>
 
 <% include partials/footer.ejs %>
