--- a/frontend/src/app/survey/partials/footer.component.html
+++ b/frontend/src/app/survey/partials/footer.component.html
@@ -7,7 +7,7 @@
      <br>
      <br>
     <footer>
-        <p>©Copyright2021 Crypto Crests | Fall 2021 | Comp229</p>
+        <p>©Copyright2021 Crypto Crest | Fall 2021 | Comp229</p>
     </footer>
      
 </div>
