--- a/backend/views/partials/footer.ejs
+++ b/backend/views/partials/footer.ejs
@@ -1,7 +1,7 @@
  <!-- Customized Footer -->
  <div class="footer">
     <footer>
-        <p>©Copyright2021 Crypto Crests | Fall 2021 | Comp229</p>
+        <p>©Copyright2021 Crypto Crest | Fall 2021 | Comp229</p>
     </footer>
     </div>       
 </div>
