--- a/frontend/src/app/survey/index.component.html
+++ b/frontend/src/app/survey/index.component.html
@@ -1,33 +1,23 @@
-<!-- <% include partials/header.ejs %> -->
+
 <app-header> </app-header>
 <div class="main_div" style="background-image:url('../../assets/img9.png');">
     <div class="container_div">
-       
         <!-- Customized header -->
-         <div class="container_header"> 
-            <h1>Hello, we are Crypto Crests!</h1>
-    
+        <div class="container_header"> 
+            <h1>Hello, we are Crypto Crest!</h1>
             <!-- Page content -->
             <div class="content">
-    
                 <br>
-                <!--My Image-->
+                <!--logo-->
                   <img class="id" src="../../assets/image_logo.jpeg" width="190" height= "200">
-    
                 <br>
                 <br>
                 <p>We are an agile group of 6 Software Engineers collaborating to build a survey web application for users who wish to create their own, personalized surveys.
                     We are open to feedbacks :)
                 </p>
                 <p>To begin your dynamic survey creativity experience <a href="/survey/list">Click Here!</a></p>
-                
             </div>
-            
-         </div>
-         <app-footer></app-footer> 
+        </div>
+        <app-footer></app-footer> 
     </div>
 </div>
-
-
-    
-<!-- <% include partials/footer.ejs %> -->
