--- a/frontend/src/app/survey/survey/add_edit.component.html
+++ b/frontend/src/app/survey/survey/add_edit.component.html
@@ -1,13 +1,11 @@
 <app-header></app-header>
-
 <!-- Content for the Add_Edit page -->
 <div class="container">
     <div class="row">
         <div class="offset-md-3 col-md-6">
             <h1>{{editing ? "Edit" : "Add a new"}} Item</h1>
-
+            <!-- form to enter survey info -->
             <form novalidate #form="ngForm" (ngSubmit)="save(form)">
-                <!-- <form class="form" method="POST"> -->
                     <div class="form-group">
                         <input type="hidden"
                             name="id"
@@ -22,41 +20,38 @@
                             required>
                     </div>
                 <br />
-                <div class="form-group">
-                    <label for="QtyTextField">No. of questions</label>
-                    <input type="number" class="form-control"
-                    id="QtyTextField"
-                    placeholder="00"
-                    name="qty" 
-                    [(ngModel)]="item.qty"
-                    required>
-                </div>
+                    <div class="form-group">
+                        <label for="QtyTextField">No. of questions</label>
+                        <input type="number" class="form-control"
+                            id="QtyTextField"
+                            placeholder="00"
+                            name="qty" 
+                            [(ngModel)]="item.qty"
+                            required>
+                    </div>
                 <br />
-                <div class="form-group">
-                    <label for="statusTextField">Description</label>
-                    <input type="text" class="form-control"
-                    id="statusTextField"
-                    placeholder="Enter a status"
-                    name="status" 
-                    [(ngModel)]="item.status"
-                    >
-                </div>
-               
+                    <div class="form-group">
+                        <label for="statusTextField">Description</label>
+                        <input type="text" class="form-control"
+                            id="statusTextField"
+                            placeholder="Enter a status"
+                            name="status" 
+                            [(ngModel)]="item.status"
+                        >
+                    </div>
                 <br/>
-
+                <!-- Submit Button -->
                 <button class="btn btn-primary" type="submit">
                     <i class="fas fa-edit"></i> 
                     Submit
                 </button>
-                
+                <!-- Cancel Button -->
                 <a routerLink="/survey/list" class="btn btn-warning">
                     <i class="fas fa-undo"></i> 
                     Cancel
                 </a>
-
             </form>
         </div>
-
     </div>
 </div>
 
