--- a/frontend/src/app/survey/survey/list.component.html
+++ b/frontend/src/app/survey/survey/list.component.html
@@ -1,6 +1,5 @@
 <!-- <%- include ../partials/header.ejs %> -->
 <app-header> </app-header>
-
   <!-- Main Content -->
   <main class="container" >
     <div class="row">
@@ -13,9 +12,7 @@
                 Add a new Survey
             </a> 
         </div>
-            
-        </div>
-
+    </div>
         <div class="table-responsive">
             <br>          
             <table class="table table-bordered table-striped table-hover">
@@ -26,35 +23,23 @@
                     <th class="text-center">Description</th>
                     <th class="text-center" colspan="2">Actions</th>
                 </tr>
-
                 <!-- Repeatable Template Row -->
-
                 <tr *ngFor="let item of surveyList">
                         <td class="text-center">{{item.item }}</td>
                         <td class="text-center">{{item.qty }}</td>
                         <td class="text-center">{{item.status }}</td>
-                        
                         <td class="text-center">
-                            <!-- <a href="/survey/edit/{{item._id }}" class="btn btn-primary btn-sm"> -->
                         <button [routerLink]="['/survey/edit/', item._id]" class="btn bg-primary btn-primary btn-sm">
                             <i class="fas fa-pencil-alt"></i>
                         </button>
-                            
                         </td>
                         <td class="text-center">
-                            <!-- <a href="/survey/delete/{{item._id }}" class="btn btn-danger btn-sm"> -->
+                            <!-- invokes alert message when delete is pressed -->
                                 <a (click)="deleteMethod(item._id)" class="btn bg-danger btn-danger btn-sm">
                             <i class="fas fa-trash-alt"></i></a>
                         </td>
                     </tr>
-                
-                    
-                <!-- <% } %> -->
-
             </table>
-        
-    </div>
-  </main>
+        </div>
+   </main>
   <app-footer> </app-footer>
-  
-<!-- <%- include ../partials/footer.ejs %> -->
