--- a/frontend/src/app/survey/survey/add_edit.component.html
+++ b/frontend/src/app/survey/survey/add_edit.component.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
         <div class="offset-md-3 col-md-6">
-            <h1>{{editing ? "Edit" : "Add a new"}} Item</h1>
+            <h1>{{editing ? "Edit" : "Add a new"}} survey</h1>
             <!-- form to enter survey info -->
             <form novalidate #form="ngForm" (ngSubmit)="save(form)">
                     <div class="form-group">
@@ -41,7 +41,7 @@
                     </div>
                 <br/>
                 <!-- Submit Button -->
-                <button class="btn btn-primary" type="submit">
+                <button class="btn btn-primary" type="submit" style="margin-right: 10px;">
                     <i class="fas fa-edit"></i> 
                     Submit
                 </button>
