--- a/frontend/src/app/survey/auth/signin.component.html
+++ b/frontend/src/app/survey/auth/signin.component.html
@@ -1,15 +1,16 @@
 
 <app-header></app-header>
-<div class="container">
-    <div class="row">
-        <div class="offset-md-3 col-md-3">
+
+<div class="container"  style="background-color: #b3e6ff;height: 580px; ">
+    <div class="row" >
+        <div class="offset-md-3 col-md-3" style="margin-top: 20px;">
             <h1>Sign In</h1>
             <!-- message div for any error -->
             <div class="bg-danger mt-2 p-2 text-center text-white" *ngIf="message != null">
                 {{message}}
             </div>
             <!-- form fro sign in -->
-            <form novalidate #form="ngForm" (ngSubmit)="authenticate(form)">
+            <form novalidate #form="ngForm" (ngSubmit)="authenticate(form)" style="margin-top: 30px;">
                 <div class="form-group">
                     <label>Username:</label>
                     <input type="text" name="username" [(ngModel)]="username" class="form-control" />
@@ -20,14 +21,18 @@
                 </div>
                 <br>
                 <div class="form-group">
-                    <input class="btn btn-primary" type="submit" value="Sign In" />                    
+                    
+                        <input class="btn btn-primary " type="submit" value="Sign In" />
+                   
                 </div>
                 <br>
-                <div class="form-group">
-                    <a href="/users/signup" style="text-decoration: none; color: aquamarine;">                
+                <div class="form-group" style="font-size: 17px">
+                    Don't have an account?
+                    <a href="/users/signup" style="text-decoration: none; color: #00cc00">                
                         <i class="fas fa-user-plus"></i> 
                         Signup
                     </a>
+                    now
                 </div>
             </form>
         </div>
