--- a/frontend/src/app/survey/survey/add_edit.component.html
+++ b/frontend/src/app/survey/survey/add_edit.component.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
         <div class="offset-md-3 col-md-6">
-            <h1>{{editing ? "Edit" : "Add a new"}} survey</h1>
+            <h1 style= "text-align: center;">{{editing ? "Edit" : "Add a new"}} survey</h1>
             <!-- form to enter survey info -->
             <form novalidate #form="ngForm" (ngSubmit)="save(form)">
                     <div class="form-group">
