--- a/frontend/src/app/survey/survey/add_edit.component.html
+++ b/frontend/src/app/survey/survey/add_edit.component.html
@@ -1,11 +1,11 @@
 <app-header></app-header>
 <!-- Content for the Add_Edit page -->
-<div class="container">
+<div class="container" style="background-color: #b3e6ff;height: 600px;">
     <div class="row">
         <div class="offset-md-3 col-md-6">
-            <h1 style= "text-align: center;">{{editing ? "Edit" : "Add a new"}} survey</h1>
+            <h1 style= "text-align: center;" style="margin-top: 20px;">{{editing ? "Edit" : "Add a new"}} survey</h1>
             <!-- form to enter survey info -->
-            <form novalidate #form="ngForm" (ngSubmit)="save(form)">
+            <form novalidate #form="ngForm" (ngSubmit)="save(form)" style="margin-top: 20px;">
                     <div class="form-group">
                         <input type="hidden"
                             name="id"
