--- a/frontend/src/app/survey/auth/signup.component.html
+++ b/frontend/src/app/survey/auth/signup.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container" style="background-color: #b3e6ff;height: 1030px; ">
+<div class="container" style="background-color: #b3e6ff;height: 1060px; ">
     <div class="row" >
         <div class="offset-md-3 col-md-3" style="margin-top: 20px;">
             <h1>Sign Up</h1>
@@ -27,6 +27,8 @@
                 </div>
                 <div class="form-group">
                     <label>Password:</label>
+                    <br/>
+                    <p style="color: #47476b;">(Password must contain at least one uppercase, one lowercase and one number)</p>
                     <input type="password"  name="password" [(ngModel)]="user.password" class="form-control"/>
                 </div>
                 <div class="form-group">
@@ -41,4 +43,10 @@
         </div>
     </div>
 </div>
+
+<style>
+    label{
+        font-weight: bolder;
+    }
+</style>
 <app-footer></app-footer>
