--- a/frontend/src/app/survey/auth/signin.component.html
+++ b/frontend/src/app/survey/auth/signin.component.html
@@ -1,41 +1,49 @@
-
+<!-- <% include ../partials/header.ejs %> -->
 <app-header></app-header>
 
-<div class="container"  style="background-color: #b3e6ff;height: 580px; ">
-    <div class="row" >
-        <div class="offset-md-3 col-md-3" style="margin-top: 20px;">
-            <h1>Sign In</h1>
-            <!-- message div for any error -->
+<div class="main_div" style="background-image:url('../../assets/work1.png'); height: 750px;">
+<div class="container_div" style="padding-top: 30px; width: 55%; height: 750px; ">
+    <div class="row">
+
+        <div class="container_header">
+            <h1>Sign-In</h1>
+            <!-- <% for(var i in messages) { %>
+                <div class="flash"><%= messages[i] %></div>
+            <% } %> -->
+        </div>
+    <div>
             <div class="bg-danger mt-2 p-2 text-center text-white" *ngIf="message != null">
                 {{message}}
             </div>
-            <!-- form fro sign in -->
-            <form novalidate #form="ngForm" (ngSubmit)="authenticate(form)" style="margin-top: 30px;">
-                <div class="form-group">
-                    <label>Username:</label>
-                    <input type="text" name="username" [(ngModel)]="username" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <label>Password:</label>
-                    <input type="password" name="password" [(ngModel)]="password" class="form-control"/>
-                </div>
-                <br>
-                <div class="form-group">
-                    
-                        <input class="btn btn-primary " type="submit" value="Sign In" />
-                   
-                </div>
-                <br>
-                <div class="form-group" style="font-size: 17px">
-                    Don't have an account?
-                    <a href="/users/signup" style="text-decoration: none; color: #00cc00">                
+
+            <!-- <form action="/users/signin" method="post"> -->
+            <form novalidate #form="ngForm" (ngSubmit)="authenticate(form)">
+        
+                    <input type="text" name="username" [(ngModel)]="username" placeholder="Enter your user name:" />
+
+                    <input type="password" name="password" [(ngModel)]="password" placeholder="Enter your password:" />
+            
+                <div>
+                    <hr>        
+
+                    <button type="submit">Sign In</button> 
+                    <p style="text-align: center; color: aliceblue;">Dont have an account?<br> <a href="/users/signup" style="text-decoration: none;">                
                         <i class="fas fa-user-plus"></i> 
                         Signup
-                    </a>
-                    now
+                    </a></p>
+                    
+            
                 </div>
             </form>
         </div>
+        <div>
+                        
+        </div>
     </div>
+    <app-footer></app-footer>
+    
 </div>
- <app-footer></app-footer>
+</div>
+<!-- <% include ../partials/footer.ejs %>
+ -->
+ 
