--- a/frontend/src/app/survey/auth/signup.component.html
+++ b/frontend/src/app/survey/auth/signup.component.html
@@ -1,52 +1,48 @@
 <app-header></app-header>
-<div class="container" style="background-color: #b3e6ff;height: 1060px; ">
-    <div class="row" >
-        <div class="offset-md-3 col-md-3" style="margin-top: 20px;">
-            <h1>Sign Up</h1>
-            <!-- Message div for error -->
+
+<div class="main_div" style="background-image:url('../../assets/work1.png'); height: 800px;">
+    <div class="container_div" style="padding-top: 30px; width: 55%; height: 800px; ">
+    <div class="row">
+
+        <div class="container_header">
+            <h1>Sign-Up</h1>
+</div>
             <div class="bg-danger mt-2 p-2 text-center text-white" *ngIf="message != null">
                 {{message}}
             </div>
-            <!-- Form for sign up -->
-            <form novalidate #form="ngForm" (ngSubmit)="signup(form)" style="margin-top: 30px;">
+
+            <form novalidate #form="ngForm" (ngSubmit)="signup(form)">
+            <!-- <form action="/users/signup" method="post" validate> -->
                 <div class="form-group">
-                    <label>First Name:</label>
-                    <input type="text" name="firstName" [(ngModel)]="user.firstName" class="form-control"/>
+                    <input type="text" name="firstName" [(ngModel)]="user.firstName" placeholder="Enter your first name:"/>
                 </div>
                 <div class="form-group">
-                    <label>Last Name:</label>
-                    <input type="text" name="lastName" [(ngModel)]="user.lastName" class="form-control"/>
+                    <input type="text" name="lastName" [(ngModel)]="user.lastName" placeholder="Enter your last name:"/>
                 </div>
                 <div class="form-group">
-                    <label>Email:</label>
-                    <input type="text" name="email" [(ngModel)]="user.email" class="form-control"/>
+                    <input type="text" name="email" [(ngModel)]="user.email" placeholder="Enter your email:" />
                 </div>
                 <div class="form-group">
-                    <label>Username:</label>
-                    <input type="text" name="username" [(ngModel)]="user.username" class="form-control"/>
+                    <input type="text" name="username" [(ngModel)]="user.username" placeholder="Enter your Username:" >
                 </div>
                 <div class="form-group">
-                    <label>Password:</label>
-                    <br/>
-                    <p style="color: #47476b;">(Password must contain at least one uppercase, one lowercase and one number)</p>
-                    <input type="password"  name="password" [(ngModel)]="user.password" class="form-control"/>
+
+                    <input type="password" name="password" [(ngModel)]="user.password" placeholder="Enter your password:"/>
                 </div>
                 <div class="form-group">
-                    <label>Confirm Password:</label>
-                    <input type="password" name="password_confirm" [(ngModel)]="confirmPassowrd" class="form-control"/>
+                    <input type="password" name="password_confirm" [(ngModel)]="confirmPassowrd" placeholder="Confirm Password:" />
                 </div>
                 <br>
                 <div>
-                    <input class="btn btn-primary" type="submit" value="CREATE ACCOUNT" />
+                    <button type="submit" value="Sign up"> Signup </button>
                 </div>
             </form>
         </div>
-    </div>
+            <br>
+            <br>
+            <br>
+            <app-footer></app-footer>
+    
+</div>
 </div>
 
-<style>
-    label{
-        font-weight: bolder;
-    }
-</style>
-<app-footer></app-footer>
