--- a/frontend/src/app/survey/survey/list.component.html
+++ b/frontend/src/app/survey/survey/list.component.html
@@ -1,51 +1,63 @@
 <!-- <%- include ../partials/header.ejs %> -->
 <app-header> </app-header>
-  <!-- Main Content -->
-  <main class="container" >
-    <div class="row">
-        <h1 style= "text-align: center"><i class="fas fa-poll-h" style="color: #3385ff;"></i> Survey List</h1>
-        <br>
+
+<!-- Main Content -->
+<div class="main_div" style="background-image:url('../../assets/work.png');height: 850px;">
+    <main class="container_div" style="padding-top: 40px;height: 850px;">
+        <div class="container_header">
+
+            <h1>Survey List</h1>
+        </div>
         <div>
             <br>
-            <a routerLink="/survey/add" class="btn btn-primary align-self-end" role="button" style="background-color: #ffdb4d; border-color: #ffdb4d; color: black; font-weight: bolder;">
-                <i class="fas fa-plus-circle"></i> 
-                Add a new Survey
-            </a> 
-        </div>
-    </div>
-        <div class="table-responsive">
-            <br>          
-            <table class="table table-bordered table-striped table-hover">
-                <!-- Header Row-->
-                <tr style="background-color: #3385ff; color: white; font-weight:bolder;">
-                    <th class="text-center">Survey Name</th>
-                    <th class="text-center">Number of questions</th>
-                    <th class="text-center">Description</th>
-                    <th class="text-center" colspan="2">Actions</th>
-                </tr>
-                <!-- Repeatable Template Row -->
-                <tr *ngFor="let item of surveyList">
-                        <td class="text-center">{{item.item }}</td>
-                        <td class="text-center">{{item.qty }}</td>
-                        <td class="text-center">{{item.status }}</td>
-                        <td class="text-center">
-                        <button [routerLink]="['/survey/edit/', item._id]" class="btn bg-primary btn-primary btn-sm">
-                            <i class="fas fa-pencil-alt"></i>
-                        </button>
-                        </td>
-                        <td class="text-center">
-                            <!-- invokes alert message when delete is pressed -->
-                                <a (click)="deleteMethod(item._id)" class="btn bg-danger btn-danger btn-sm">
-                            <i class="fas fa-trash-alt"></i></a>
-                        </td>
-                    </tr>
-            </table>
-        </div>
-   </main>
-   <style>
- tr:nth-child(odd) {
-  background-color: #e6eeff;
-}
+            <div>
+                <br>
+                <a routerLink="/survey/add" class="btn btn-primary align-self-end" role="button">
+                    <i class="fas fa-plus-circle"></i>
+                    Add a new Survey
+                </a>
+            </div>
 
-   </style>
-  <app-footer> </app-footer>
+        </div>
+
+        <div class="table">
+            <br>
+            <table>
+                <!-- Header Row-->
+                <tr>
+                    <th>Survey Name</th>
+                    <th>Number of questions</th>
+                    <th>Description</th>
+                    <th colspan="2">Actions</th>
+                </tr>
+
+                <!-- Repeatable Template Row -->
+
+                <tr *ngFor="let item of surveyList">
+                    <td>{{item.item }}</td>
+                    <td>{{item.qty }}</td>
+                    <td>{{item.status }}</td>
+
+                    <td class="text-center">
+                        <!-- <a href="/survey/edit/{{item._id }}" class="btn btn-primary btn-sm"> -->
+                        <a [routerLink]="['/survey/edit/', item._id]" style="margin: 0%;" class="btn bg-primary btn-primary btn-sm">
+                            <i class="fas fa-pencil-alt"></i>
+                        </a>
+
+                    </td>
+                    <td class="text-center">
+                        <!-- <a href="/survey/delete/{{item._id }}" class="btn btn-danger btn-sm"> -->
+                        <a (click)="deleteMethod(item._id)" style="margin: 0%;" class="btn bg-danger btn-danger btn-sm">
+                            <i class="fas fa-trash-alt"></i></a>
+                    </td>
+                </tr>
+
+            </table>
+           
+            <app-footer> </app-footer>
+        </div>
+    </main>
+</div>
+
+
+<!-- <%- include ../partials/footer.ejs %> -->
