Update List and Signup page

--- a/frontend/src/app/survey/auth/signin.component.html
+++ b/frontend/src/app/survey/auth/signin.component.html
@@ -27,7 +27,7 @@
                     <hr>        
 
                     <button type="submit">Sign In</button> 
-                    <p style="text-align: center; color: aliceblue;">Dont have an account?<br> <a href="/users/signup" style="text-decoration: none;">                
+                    <p style="text-align: center; color: aliceblue; font-size: 17px;">Dont have an account?<br> <a href="/users/signup" style="text-decoration: none;">                
                         <i class="fas fa-user-plus"></i> 
                         Signup
                     </a></p>
