--- a/frontend/src/app/survey/auth/signup.component.html
+++ b/frontend/src/app/survey/auth/signup.component.html
@@ -26,8 +26,9 @@
                     <input type="text" name="username" [(ngModel)]="user.username" placeholder="Enter your Username:" >
                 </div>
                 <div class="form-group">
-
+                    
                     <input type="password" name="password" [(ngModel)]="user.password" placeholder="Enter your password:"/>
+                    <p style="text-align: center; color: white; opacity:0.7;">(Password must have at least one uppercase, one lowercase and one number)</p>
                 </div>
                 <div class="form-group">
                     <input type="password" name="password_confirm" [(ngModel)]="confirmPassowrd" placeholder="Confirm Password:" />
