--- a/frontend/src/app/survey/auth/signup.component.html
+++ b/frontend/src/app/survey/auth/signup.component.html
@@ -27,8 +27,8 @@
                 </div>
                 <div class="form-group">
                     
-                    <input type="password" name="password" [(ngModel)]="user.password" placeholder="Enter your password:"/>
-                    <p style="text-align: center; color: white; opacity:0.7;">(Password must have at least one uppercase, one lowercase and one number)</p>
+                    <input type="password" name="password" [(ngModel)]="user.password" placeholder="Password must include uppercase, lowercase and number"/>
+ 
                 </div>
                 <div class="form-group">
                     <input type="password" name="password_confirm" [(ngModel)]="confirmPassowrd" placeholder="Confirm Password:" />
