--- a/frontend/src/app/survey/survey/questions/questions.component.html
+++ b/frontend/src/app/survey/survey/questions/questions.component.html
@@ -48,11 +48,11 @@
                
                 <br/>
 
-                <button (click)="save(form)"
+               <!-- <button (click)="save(form)"
                 type="submit">
                     <i class="fas fa-edit"></i> 
                     Submit
-                </button>
+                </button>-->
                 <button routerLink="/survey/list" >
                     <i class="fas fa-undo"></i> 
                     Cancel
