--- a/frontend/src/app/survey/survey/view-answers/view-answers.component.html
+++ b/frontend/src/app/survey/survey/view-answers/view-answers.component.html
@@ -20,7 +20,7 @@
                     <td> {{completed.respondent}}</td>
                     <td>
                     <ul>
-                      <li *ngFor="let question of completed.answers">{{question.question}} : {{question.answer}} </li>
+                      <li *ngFor="let ques of completed.answers">{{ques.question}}&nbsp;&nbsp;{{ques.answer}} </li>
                    
                    </ul>
                    </td>
