--- a/frontend/src/app/survey/partials/header.component.html
+++ b/frontend/src/app/survey/partials/header.component.html
@@ -22,6 +22,14 @@
                 <li><a class="dropdown-item" routerLink="/survey/add_edit"> <i class="fas fa-plus-circle"></i> Add a new Item</a></li>
               </ul>
             </li>
+
+            <li class="nav-item">
+              <a *ngIf="auth.username != null" class="nav-link" routerLink="/users/userprofile"><i class="fas fa-user"></i> {{ auth.username }}</a>
+              <a *ngIf="auth.username == null" class="nav-link" routerLink="/users/signin"> <i class="fas fa-user"></i> User</a>           
+              
+            </li>    
+
+
             <li class="nav-item">
                 <a *ngIf="auth.username != null" class="nav-link" routerLink="" (click)="logout()"><i class="fas fa-external-link-alt"></i> Sign Out ({{ auth.username }})</a>
                 <a *ngIf="auth.username == null" class="nav-link" routerLink="/users/signin"> <i class="fas fa-sign-in-alt"></i> Sign In</a>
